ogp meta tags moved to public

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,23 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/images/icons/icon-96x96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#F46286" />
+    <meta property="og:url" content="https://gurajmesu-search.netlify.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Gurajmesu Search" />
+    <meta
+      property="og:description"
+      content="Najlepsza wyszukiwarka tekstów utworów autorstwa Grimes"
+    />
+    <meta
+      property="og:image"
+      content="http://images3.alphacoders.com/630/630823.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://images3.alphacoders.com/630/630823.jpg"
+    />
+    <meta property="og:image:width" content="1920" />
+    <meta property="og:image:height" content="1080" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
